re fucking pushed

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0" />
+  <meta name="description" content="">
+  <meta name="title" content="">
+  <meta name="keywords" content="">
+
+  <title>Wardimatic Pictures</title>
+  
+  <link rel="stylesheet" href="css/ionicons.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div id="wrapper">
+    <img src="img/logo.jpg" alt="Wardimatic Pictures Logo" class="animated fadeInDown">
+    <p class="animated fadeIn">Sorry for the inconvenience guys & gals!! Our website is currently under construction. In the meantime check out some of our visuals through our youtube channel. Thank you for your patience!! :)</p>
+    <footer class="animated fadeInUp">
+      <a href="https://www.facebook.com/mjwardFilm" target="_blank" class="ion-social-facebook-outline"></a>
+      <a href="https://www.youtube.com/user/mjward305" target="_blank" class="ion-social-youtube-outline"></a>
+      <a href="http://instagram.com/wardimaticpictures" target="_blank" class="ion-social-instagram-outline"></a>
+      <a href="https://twitter.com/wardimaticpics" target="_blank" class="ion-social-twitter-outline"></a>
+    </footer>
+  </div>
+</body>
+</html>
