--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="title" content="">
   <meta name="keywords" content="">
 
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
   <title>Wardimatic Pictures</title>
 
