added meta tags for Search Engines and words describing mikes work

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="">
-  <meta name="title" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Welcome to the site of Michael James Ward, Photographer and Videographer">
+  <meta name="title" content="Wardimatic Pictures">
+  <meta name="keywords" content="Videographer, Photographer, Video, Photo, Film, Digital Film, Production, Video Production, Photography">
 
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
@@ -47,7 +47,7 @@
             youtube: { autoplay: 1 }
           }
         });
-      }, 3000);
+      }, 3500);
     });
   </script>
 </body>
