--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/fresco.css">
 </head>
+
 <body>
   <div id="wrapper" class="Absolute-Center">
     <img src="img/logo.png" alt="Wardimatic Pictures Logo" class="animated fadeInDown">
@@ -35,7 +36,8 @@
   <script src="js/center.module.js"></script>
   <script type="text/javascript">
     $(function() {
-      $('#wrapper').center();
+      $('#wrapper').center().show();
+
 
       function showVideo() {
         Fresco.show({
